# Lois1

./: CMakeLists.txt  main.cpp
source/: DNF.cpp  DNF.h  KNF.cpp  KNF.h  Validation.cpp  Validation.h
tests/: testKNF.cpp  testValidation.cpp
